--- a/web/src/index.css
+++ b/web/src/index.css
@@ -59,3 +59,33 @@ padding-top: 6px ;
   background-color: #f5f5f5;
   border: none;
 }
+
+.modal-button{
+  border: none;
+}
+
+.reusable-input input{
+  background-color: transparent  ;
+  border-bottom: 1px solid #D3D3D3 ;
+  border-radius: 0px ;
+  width: 500px;
+}
+
+/* .mantine-Notification-root{
+  position: absolute;
+  top: 0;
+  right: 0px;
+  z-index: 10000px;
+} */
+
+.dropdown-style{
+  position: relative;
+  z-index: 10000;
+  border: 2px solid rgb(255, 255, 255);
+  border-radius: 8px;
+  position: absolute;
+  padding: 5px;
+  width:150px;
+  background-color: #000000;
+  color: white;
+}
