--- a/web/src/index.css
+++ b/web/src/index.css
@@ -71,13 +71,6 @@ padding-top: 6px ;
   width: 500px;
 }
 
-/* .mantine-Notification-root{
-  position: absolute;
-  top: 0;
-  right: 0px;
-  z-index: 10000px;
-} */
-
 .dropdown-style{
   position: relative;
   z-index: 10000;
@@ -89,3 +82,27 @@ padding-top: 6px ;
   background-color: #000000;
   color: white;
 }
+
+
+.delete-icon{
+  bottom: 20px;
+  display: none;
+  height: 8px;
+  width: 8px;
+}
+
+.product-wrapper:hover .delete-icon{
+  bottom: 20px;
+  height: 15px;
+  width: 15px;
+  display: block;
+  cursor: pointer;
+}
+
+.secondary-button{
+  background-color: white ;
+  color: black;
+  border: 2px solid black;
+  border-radius: 4px ;
+}
+
